# testaustime-nvim

./: README.md  testaustime-nvim.cabal
.github/workflows/: haskell.yml
plugin/: testaustime.vim
testaustime-nvim/: Main.hs  Plugin.hs  Testaustime.hs
